modifying for the atlassian summit + some cleanup

--- a/presentation/css/reveal.css
+++ b/presentation/css/reveal.css
@@ -350,8 +350,11 @@ body {
 
 .reveal table th,
 .reveal table td {
+
+
 	text-align: left;
-	padding-right: .3em;
+	padding: 0.2em 0.5em 0.2em 0.5em;
+	border-bottom: 1px solid;
 }
 
 .reveal table th {
